# userfetchapi

./: .gitignore  README.md  config.py  install.py  install.sh  pyproject.toml  settings.toml
userfetchapi/: main.py
userfetchapi/api/: users_routes.py
userfetchapi/models/: user_model.py
userfetchapi/schemas/: user_schemas.py
userfetchapi/services/: user_service.py
