[tool.poetry]
name = "userfetchapi"
version = "0.1.0"
description = ""
authors = ["NatanCervinski <natanscer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = {extras = ["standard"], version = "^0.115.0"}
dynaconf = "^3.2.6"
sqlalchemy = "^2.0.35"
pysqlite3 = "^0.5.3"
python-dotenv = "^1.0.1"
mysqlclient = "^2.2.4"
inquirerpy = "^0.3.4"
uvicorn = "^0.31.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["ANN"]

[tool.poetry.scripts]
install = "userfetchapi.install:install"

[tool.taskipy.tasks]
run = "fastapi dev userfetchapi/main.py"
